kubernetes/infra/network/cloudflare-tunnel/_base/netpols.yaml
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-cloudflare
spec:
  description: "Allow egress to cloudflare via DNS-aware FQDN policy"
  endpointSelector:
    matchLabels: {}
  egress:
    - toFQDNs:
        - matchName: region2.v2.argotunnel.com
    - toServices:
        - k8sService:
            namespace: network
            serviceName: cilium-gateway-external
